--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "homepage": "http://videojs.com",
   "author": "Steve Heffernan",
   "scripts": {
+    "lint": "vjsstandard",
     "test": "grunt test"
   },
   "repository": {
@@ -65,6 +66,7 @@
     "grunt-fastly": "^0.1.3",
     "grunt-github-releaser": "^0.1.17",
     "grunt-karma": "^0.8.3",
+    "grunt-shell": "^1.3.0",
     "grunt-version": "~0.3.0",
     "grunt-videojs-languages": "0.0.4",
     "grunt-zip": "0.10.2",
@@ -87,7 +89,7 @@
     "time-grunt": "^1.1.1",
     "uglify-js": "~2.3.6",
     "videojs-doc-generator": "0.0.1",
-    "videojs-standard": "^4.0.1"
+    "videojs-standard": "^5.0.0"
   },
   "vjsstandard": {
     "ignore": [
